fixed title fonts spacing and color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,58 @@
-html { 
+body { 
     background: url("../images/background1.gif") no-repeat center center fixed; 
     -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
-  };
+
+  }
+
+  /* title decoration */
+
+  #pony {
+
+    font-family: 'Modak', cursive;
+    color: pink;
+    font-size: 90px;
+    text-shadow: 4px 4px 4px rgb(223, 56, 173);
+
+  }
+
+  #vs {
+
+    font-family: 'Libre Baskerville', serif;
+    font-size: 80px;
+    text-shadow: 4px 4px 4px rgb(110, 110, 110);
+
+  }
+
+  #marvel {
+
+    font-family: 'Noto Sans KR', sans-serif;
+    color: red;
+    font-size: 80px;
+    text-shadow: 4px 4px 4px rgb(109, 7, 7);
+
+  }
+/* Hero select row */
+#heroselect {
+
+
+}
+
+/* Small devices (landscape phones, 576px and up) */
+
+@media (min-width: 576px) { 
+  
+ }
+
+/* Medium devices (tablets, 768px and up) */
+
+@media (min-width: 768px) { 
+  
+}
+
+/* Large devices (desktops, 992px and up) */
+
+@media (min-width: 992px) { 
+  
+ }
+
